refactor: Refactor to use block ranges everywhere. Fix protobuf commit to latest. Fix module dependencies from Atanas's PR
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>
Signed-off-by: Joseph Sinclair <121976561+jsync-swirlds@users.noreply.github.com>